--- a/Operating System/1. Introduction to Operating System.md
+++ b/Operating System/1. Introduction to Operating System.md
@@ -1,5 +1,6 @@
+# Introduction
 
-An operating system is a piece of software that manages all the resources if a computer system both hardware and software, and provides an enviroment in which the user can execute his programs in a convenient and efficient manner by hiding underlying complexity of the hardware and acting as a resource manager.
+An operating system is a piece of software that manages all the resources in a computer system both hardware and software, and provides an enviroment in which the user can execute his programs in a convenient and efficient manner by hiding underlying complexity of the hardware and acting as a resource manager.
 
 ### What if there is no OS?
 
