--- a/Operating System/2. Types of operating system.md
+++ b/Operating System/2. Types of operating system.md
@@ -70,7 +70,7 @@ Example: Windows
 
 ###  Distributed OS :-
 
-1. OS manages many bunches of resources, >=1 CPU, >= 1 memory , >= GPU etc
+1. OS manages many bunches of resources, >=1 CPU, >= 1 memory , >= 1 GPU etc
 2. Loosely connected autonomous , interconnected computer nodes.
 3. Collection of independent networked communicating and physically seperated computational nodes.
 
