added questions in DP

--- a/DSA_imp/Dynamic Programming/7. Ninjas Training 2D DP.md
+++ b/DSA_imp/Dynamic Programming/7. Ninjas Training 2D DP.md
@@ -65,6 +65,10 @@ Hence, the answer is 210.
 
 ### Approach 1 (Recursion) :
 
+![[ninjas_training_app1.png]]
+
+![[ninjas_training_app2.png]]
+
 ```cpp
 int solve(int lastTask,int day,vector<vector<int>> &points)
 {
