--- a/DSA_imp/Dynamic Programming/9. Unique Paths 2.md
+++ b/DSA_imp/Dynamic Programming/9. Unique Paths 2.md
@@ -1,7 +1,7 @@
 # Unique Paths 2
 #dp_on_grids
 
-Same as Unique paths [[Unique Paths]]  with small change.
+Same as Unique paths [[8. Unique Paths]]  with small change.
 
 You are given an `m x n` integer array `grid`. There is a robot initially located at the **top-left corner** (i.e., `grid[0][0]`). The robot tries to move to the **bottom-right corner** (i.e., `grid[m-1][n-1]`). The robot can only move either down or right at any point in time.
 
