--- a/DSA_imp/Dynamic Programming/14. Subset sum equal to k.md
+++ b/DSA_imp/Dynamic Programming/14. Subset sum equal to k.md
@@ -63,7 +63,8 @@ bool subsetSumToK(int n, int k, vector<int> &arr) {
     vector<vector<bool>> dp(n+1,vector<bool>(k+1,false));
     for(int i=0;i<n;i++)
         dp[i][0]=true;
-    dp[0][arr[0]]=true;
+    if(arr[0]<=k)
+	    dp[0][arr[0]]=true;
     for(int index=1;index<n;index++)
     {
         for(int target=1;target<=k;target++)
