--- a/DSA_imp/Dynamic Programming/6. House Robber 2.md
+++ b/DSA_imp/Dynamic Programming/6. House Robber 2.md
@@ -1,7 +1,7 @@
 # House Robber 2
 
 >**Similar as maximum sum of non adjacent elements**
->[[maximum sum of non adjacent elements]]
+>[[5. maximum sum of non adjacent elements]]
 
 You are a professional robber planning to rob houses along a street. Each house has a certain amount of money stashed. All houses at this place are **arranged in a circle.** That means the first house is the neighbor of the last one. Meanwhile, adjacent houses have a security system connected, and **it will automatically contact the police if two adjacent houses were broken into on the same night**.
 
@@ -27,7 +27,7 @@ Total amount you can rob = 1 + 3 = 4.
 
 ### Approach (Tabualtion) :
 
-As I previously said it is same as the [[maximum sum of non adjacent elements]] but in this question
+As I previously said it is same as the [[5. maximum sum of non adjacent elements]] but in this question
 **index 0 and index (n-1)** is also a adjacent neighbour. So we cannot take index 0 and index n-1 together.
 
 **How we will know that have to take index 0 or not. OR how we will know that we have to take index n-1 in sum or not.**
