DP Questions added

--- a/DSA_imp/Dynamic Programming/22. Minimum number of coins.md
+++ b/DSA_imp/Dynamic Programming/22. Minimum number of coins.md
@@ -1,5 +1,6 @@
 
 # Minimum Number of Coins
+#dp_on_sequences 
 
 ##### Sample Input 1 :
 
@@ -84,33 +85,31 @@ int minimumElements(vector<int> &num, int x)
 ### Approach 2 (Memoization) :
 
 ```cpp
-int solve(int k,vector<int> &num,int target,vector<int> &dp)
+int solve(vector<int> &coins,int amount,vector<int> &dp)
 {
-    if(target==0)
-        return 0;
-    if(target<0)
-        return INT_MAX;
-    if(dp[target]!=-1)
-        return dp[target];
-    int mini=INT_MAX;
-    for(int i=0;i<k;i++)
-    {
-        int ans=solve(k,num,target-num[i],dp);
-        if(ans!=INT_MAX)
-            mini=min(mini,1+ans);
-    }
-    dp[target]=mini;
-    return mini;
+	if(amount==0)
+		return 0;
+	else if(dp[amount]!=-1)
+		return dp[amount];
+	int mini=INT_MAX;
+	for(int i=0;i<coins.size();i++)
+	{
+		int ans;
+		if(amount>=coins[i])
+		{
+			ans=solve(coins,amount-coins[i],dp);
+			if(ans!=INT_MAX)
+				mini=min(mini,1+ans);
+		}
+	}
+	return dp[amount]=mini;
 }
-int minimumElements(vector<int> &num, int x)
-{
-    
-    int k=num.size();
-    vector<int> dp(x+1,-1);
-    int ans=solve(k,num,x,dp);
-    if(ans==INT_MAX)
-        return -1;
-    return ans;
+int coinChange(vector<int>& coins, int amount) {
+	vector<int> dp(amount+1,-1);
+	int ans=solve(coins,amount,dp);
+	if(ans!=INT_MAX)
+		return ans;
+	return -1;
 }
 ```
 
@@ -126,13 +125,13 @@ int minimumElements(vector<int> &num, int x)
     int k=num.size();
     vector<int> dp(x+1,INT_MAX);
     dp[0]=0;
-    for(int i=1;i<=x;i++)
+    for(int tar=1;tar<=x;tar++)
     {
         for(int j=0;j<k;j++)
         {
-            if(i-num[j]>=0 and dp[i-num[j]]!=INT_MAX)
+            if(tar-num[j]>=0 and dp[tar-num[j]]!=INT_MAX)
             {
-                dp[i]=min(dp[i],1+dp[i-num[j]]);
+                dp[tar]=min(dp[tar],1+dp[tar-num[j]]);
             }
         }
     }
