Added Computer Networks

--- a/Operating System/2. Types of operating system.md
+++ b/Operating System/2. Types of operating system.md
@@ -15,7 +15,7 @@ Example: MSDOS
 
 
 ### Batch-Processing OS :-
-#important_for_interview 
+#important_os_interview
 1. Firstly user prepares his job using puch cards.
 2. Then he, submits the job to the computer operator.
 3. Operator collects the jobs from different users and sorts the jobs into the batches with similar needs.
@@ -33,7 +33,7 @@ Example: ATLAS
 
 
 ### Multi Programming OS :-
-#important_for_interview 
+#important_os_interview
 Increases CPU utilization by keeping multiple jobs(code and data) in the memory so that the CPU always has one to execute in case some job gets busy with I/O.
 
 1. Single CPU
@@ -44,7 +44,7 @@ Increases CPU utilization by keeping multiple jobs(code and data) in the memory 
 Example: THE
 
 ### Multi Tasking OS  :-
-#important_for_interview 
+#important_os_interview
 is a logical extension of multiprograming. We can say it's a 2.0 version of multiprogramming OS.
 1. Single CPU
 2. Able to run more than one task simultaneously
@@ -59,7 +59,7 @@ Example: CTSS
 
 
 ### Multi Processing OS :-
-#important_for_interview
+#important_os_interview
 More than 1 CPU in a single computer.
 1. Increases reliability , 1 CPU fails other can work.
 2. Better throughput
