--- a/DSA_imp/Dynamic Programming/30. Minimum Insertions Deletions to Convert String A to String B.md
+++ b/DSA_imp/Dynamic Programming/30. Minimum Insertions Deletions to Convert String A to String B.md
@@ -1,4 +1,5 @@
 # Minimum Insertions/Deletions to Convert String A to String B
+#dp_on_strings
 
 Given two strings `word1` and `word2`, return _the minimum number of **steps** required to make_ `word1` _and_ `word2` _the same_.
 
