--- a/DSA_imp/Dynamic Programming/31. Shortest Common SuperSequence.md
+++ b/DSA_imp/Dynamic Programming/31. Shortest Common SuperSequence.md
@@ -1,5 +1,5 @@
 # Shortest Common Subsequence
-
+#dp_on_strings 
 
 Given two strings `str1` and `str2`, return _the shortest string that has both_ `str1` _and_ `str2` _as **subsequences**_. If there are multiple valid strings, return **any** of them.
 
