--- a/DSA_imp/Dynamic Programming/32. Distinct Subsequences.md
+++ b/DSA_imp/Dynamic Programming/32. Distinct Subsequences.md
@@ -1,5 +1,5 @@
 # Distinct Subsequences in string s2 in s1
-
+#dp_on_strings 
 
 Given two strings `s` and `t`, return _the number of distinct subsequences of `s` which equals `t`_.
 
