--- a/SQL/LeetCode/4. Customers Who Never Order.md
+++ b/SQL/LeetCode/4. Customers Who Never Order.md
@@ -10,13 +10,20 @@ The query result format is in the following example.
 ![[4.2.png]]
 
 
-### Query
+### Query 1
 
 ```sql
 SELECT name as Customers from customers WHERE customers.id 
 NOT IN (select customerId from orders);
 ```
 
+### Query 2
+
+```sql
+SELECT email from Person
+group by email
+having count(email) > 1;
+```
 
 ### Link :
 https://leetcode.com/problems/customers-who-never-order/
