Added new files

--- a/SQL/LeetCode/3. Duplicate Emails.md
+++ b/SQL/LeetCode/3. Duplicate Emails.md
@@ -17,6 +17,14 @@ The query result format is in the following example.
 SELECT DISTINCT P1.email from person as P1 WHERE P1.email in (SELECT P2.email from person as P2 WHERE P1.id!=P2.id); 
 ```
 
+### Query 2
+
+```sql
+SELECT email from Person
+group by email
+having count(email) > 1;
+```
+
 
 ### Link :
 https://leetcode.com/problems/duplicate-emails/
